--- a/style/style.css
+++ b/style/style.css
@@ -31,7 +31,7 @@
   margin-bottom: 20px;
   margin-right: auto;
   margin-left: auto;
-  font-size: 1,01em;
+  font-size: 1.12em;
 }
 
 .info{
@@ -44,7 +44,7 @@
 }
 .content{
   width: 100%;
-  font-size: 1em;
+  font-size: 1.2em;
 }
 
 li{
@@ -66,6 +66,7 @@ p{
 .credits{
   text-align: center;
   width: 60%;
+  font-size:1.1em;
   margin-left: auto;
   margin-right: auto;
   margin-top:10px;
@@ -73,6 +74,9 @@ p{
 }
 
 @media (max-width: 600px){
+  .img{
+    width: 85%;
+  }
   .info{
     width: 90%;
   }
