--- a/style/style.css
+++ b/style/style.css
@@ -37,19 +37,20 @@
 .info{
   display: block;
   width: 60%;
-  max-width: 600px;
+  min-width: 400px;
   margin-top:70px;
   margin-left: auto;
   margin-right: auto;
 }
 .content{
+  display: block;
   width: 100%;
   font-size: 1.1em;
 }
 
 li{
   display: flex;
-  margin-top: 20px;
+  margin-top: 10px;
   margin-bottom: 20px;
   
 }
@@ -58,7 +59,12 @@ li{
   margin-right: 10px;
 }
 
+.content-text{
+  width: 80%;
+}
+
 p{
+  min-width:65px ;
   margin-right: auto;
   color : #282828;
 }
@@ -73,15 +79,18 @@ p{
   margin-bottom: 60px;
 }
 
-@media (max-width: 600px){
+@media screen and (max-width: 700px){
+  body{
+    width: 100%;
+  }
   .img{
-    width: 85%;
+    width: 60%;
   }
   .info{
     width: 90%;
   }
-  p{
-    width: 70%;
+  .content{
+    font-size: 1.2em;
   }
   .year{
     width: 20px;
